# BearAttack

./: .gitignore  CMakeLists.txt  README.md  build  main.cpp  run
assets/textures/: spritesheet.xcf
src/: Bear.cpp  Bear.h  CMakeLists.txt  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  IntroState.cpp  IntroState.h  Kid.cpp  Kid.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  State.h  Timer.h
